@@ -15,6 +15,8 @@ version 2.2
 	  if an agent throws an uncaught exception in getMove(...).
 	* Fixed a rare race condition in the game engine that can cause a
 	  NullPointerException if the agent's thread exceeds its deadline.
+	* Fixed a memory explosion caused by the caching of successors in
+	  GameState.
 	  
 	API Changes:
 	* None.
